@@ -1,3 +1,8 @@
+2008-05-14  Robert Ancell  <robert.ancell@gmail.com>
+
+	* src/lib/scene/opengl/png.py: Updated to latest version from pypng. Open files in binary
+	  mode so they work in Windows.
+
 2008-05-10  Robert Ancell  <robert.ancell@gmail.com>
 
 	* src/lib/ggz/chess.py: Fix crash decoding empty GGZ strings (Bug #530579)
